# science-to-content

./: Header.docx  PORTFOLIO_README.md  README.md  ~$Header.docx
client/: package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx
client/src/data/: analytics.ts  contentTemplates.ts  generatedContent.ts  internalBriefs.ts  rdDocuments.ts  socialPost.ts  trends.ts  utils.ts
client/src/layouts/: Footer.tsx  Header.tsx  Layout.tsx  Logo.tsx
client/src/pages/: AnalyticsPage.tsx  ContentCreator.tsx  ContentGenerator.tsx  ContentGeneratorPage.tsx  InternalBriefGeneratorPage.tsx  ReviewQueue.tsx  ReviewQueuePage.tsx  (+2 more)
server/: .env.example  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  BACKEND_SETUP.md  Dockerfile  NEXT_STEPS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
server/app/: config.py  database.py  main.py  models.py  schemas.py
server/app/api/: briefs.py  content.py  generation.py  trends.py
server/app/models/: __init__.py  approval.py  audit_log.py  base.py  brief.py  content.py  embedding.py  enums.py  generation_job.py  rd_document.py  trend.py  user.py
server/app/schemas/: __init__.py  approval.py  base.py  brief.py  content.py  generation.py  rd_document.py  trend.py  user.py
server/app/services/: email_service.py  llm_service.py  retrieval_service.py  storage_service.py  trend_detection_service.py
server/app/tests/: conftest.py
server/app/workers/: generation_worker.py  ingestion_worker.py
server/markdownFiles/: ALIGNMENT_REPORT.md  FIELD_MAPPING.md  REFACTORING_SUMMARY.md
server/tests/: conftest.py  test_api.py
(+56 files in other folders)
